--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".view.AboutMeActivity"></activity>
+        <activity android:name=".view.BaseActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize" />
         <activity android:name=".view.QuestionOpenedActivity" />
         <activity android:name=".view.AddQuestionActivity" />
         <activity android:name=".view.HeadPortrait" />
